# xwm

./: .gitmodules  README.md
xwm/: LICENSE  build  cabal.project  xwm.cabal
xwm/icons/: trayer-padding-72px.xpm  trayer-padding-85px.xpm
xwm/icons/battery/idle/: battery_idle_0.xpm  battery_idle_1.xpm  battery_idle_2.xpm  battery_idle_3.xpm  battery_idle_4.xpm  battery_idle_5.xpm  battery_idle_6.xpm  battery_idle_7.xpm  battery_idle_8.xpm
xwm/icons/battery/off/: battery_off_1.xpm  battery_off_2.xpm  battery_off_3.xpm  battery_off_4.xpm  battery_off_5.xpm  battery_off_6.xpm  battery_off_7.xpm  battery_off_8.xpm
xwm/icons/battery/on/: battery_on_0.xpm  battery_on_1.xpm  battery_on_2.xpm  battery_on_3.xpm  battery_on_4.xpm  battery_on_5.xpm  battery_on_6.xpm  battery_on_7.xpm  battery_on_8.xpm
xwm/icons/brightness/: brightness_0.xpm  brightness_1.xpm  brightness_2.xpm  brightness_3.xpm  brightness_4.xpm  brightness_5.xpm  brightness_6.xpm  brightness_7.xpm  brightness_8.xpm
xwm/icons/cpu/: cpu_0.xpm  cpu_1.xpm  cpu_2.xpm  cpu_3.xpm  cpu_4.xpm  cpu_5.xpm  cpu_6.xpm  cpu_7.xpm  cpu_8.xpm
xwm/icons/network/rx/: network_rx_0.xpm  network_rx_1.xpm  network_rx_2.xpm  network_rx_3.xpm  network_rx_4.xpm  network_rx_5.xpm  network_rx_6.xpm  network_rx_7.xpm  network_rx_8.xpm
xwm/icons/network/tx/: network_tx_0.xpm  network_tx_1.xpm  network_tx_2.xpm  network_tx_3.xpm  network_tx_4.xpm  network_tx_5.xpm  network_tx_6.xpm  network_tx_7.xpm  network_tx_8.xpm
xwm/icons/ram/: ram_0.xpm  ram_1.xpm  ram_2.xpm  ram_3.xpm  ram_4.xpm  ram_5.xpm  ram_6.xpm  ram_7.xpm  ram_8.xpm
xwm/icons/temperature/: temperature_0.xpm  temperature_1.xpm  temperature_2.xpm  temperature_3.xpm  temperature_4.xpm  temperature_5.xpm  temperature_6.xpm  temperature_7.xpm  temperature_8.xpm
xwm/icons/volume/: high.xpm  low.xpm  medium.xpm  mute.xpm  none.xpm
xwm/icons/weather/: weather_cloudy.xpm  weather_mostly_cloudy.xpm  weather_mostly_sunny.xpm  weather_obscured.xpm  weather_sunny.xpm
xwm/scripts/: padding-icon  xmPacman  xmVolume
xwm/src/: xbar.hs  xwm.hs
xwm/src/lib/Theme/: Palette.hs  XResources.hs
xwm/src/lib/XMonad/User/Bindings/: Binder.hs  Keys.hs  Mouse.hs  Util.hs
xwm/src/lib/XMonad/User/Layout/: Decorations.hs  Hook.hs  Layouts.hs  Workspaces.hs
xwm/src/lib/XMonad/User/Layout/MultiToggle/: TabBarDecoration.hs
xwm/src/lib/XMonad/User/Log/: ClickableWorkspaces.hs  StatusBar.hs
xwm/src/lib/XMonad/User/Manage/: Hook.hs  Util.hs
xwm/src/lib/XMonad/User/Prompt/: Config.hs  MPD.hs
xwm/src/lib/XMonad/User/Startup/: Hook.hs
xwm/src/lib/Xmobar/User/: Monitors.hs  Util.hs
