cabal-version:      2.4
name:               xwm
version:            0.17.0.0
build-type:         Simple
license:            GPL-3.0-only
license-file:       LICENSE
copyright:          Copyright (c) 2022 Marco Cantoro
author:             Marco Cantoro <marco.cantoro92@outlook.it>
maintainer:         Marco Cantoro <marco.cantoro92@outlook.it>
stability:          experimental
homepage:           http://xmonad.org
bug-reports:        https://github.com/CantoroMC/xwm
synopsis:           XMonad and Xmobar configurations
description:        Custom build of XMonad and XMobar using cabal
category:           System
tested-with:        GHC == 8.10.4, GHC == 8.10.5, GHC == 8.10.7
extra-source-files: build

library
  hs-source-dirs:   src/lib
  exposed-modules:    XMonad.User.Bindings.Binder
                    , XMonad.User.Bindings.Keys
                    , XMonad.User.Bindings.Mouse
                    , XMonad.User.Bindings.Util
                    , XMonad.User.Layout.Workspaces
  build-depends:      base >= 4.7 && < 4.16
                    , containers
                    , mtl
                    , X11
                    , xmonad
                    , xmonad-contrib
  default-language: Haskell2010

executable xwm
  main-is:          xwm.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -fno-warn-missing-signatures
  build-depends:      base ^>= 4.14.3.0
                    , containers
                    , xmonad
                    , xmonad-contrib
                    , xwm
  default-language: Haskell2010
