cabal-version:      2.4
name:               xwm
version:            0.17.0.0
build-type:         Simple
license:            GPL-3.0-only
license-file:       LICENSE
copyright:          Copyright (c) 2022 Marco Cantoro
author:             Marco Cantoro <marco.cantoro92@outlook.it>
maintainer:         Marco Cantoro <marco.cantoro92@outlook.it>
stability:          experimental
homepage:           http://xmonad.org
bug-reports:        https://github.com/CantoroMC/xwm
synopsis:           XMonad and Xmobar configurations
description:        Custom build of XMonad and XMobar using cabal
category:           System
tested-with:        GHC == 8.10.4, GHC == 8.10.5, GHC == 8.10.7
extra-source-files: build
                  , scripts/padding-icon
                  , scripts/xmPacman
                  , scripts/xmVolume
                  , icons/battery/idle/*.xpm
                  , icons/battery/off/*.xpm
                  , icons/battery/on/*.xpm
                  , icons/brightness/*.xpm
                  , icons/cpu/*.xpm
                  , icons/network/rx/*.xpm
                  , icons/network/tx/*.xpm
                  , icons/ram/*.xpm
                  , icons/temperature/*.xpm
                  , icons/volume/*.xpm
                  , icons/weather/*.xpm

library
  hs-source-dirs:   src/lib
  exposed-modules:    Theme.XResources
                    , Theme.Palette
                    , XMonad.User.Bindings.Binder
                    , XMonad.User.Bindings.Keys
                    , XMonad.User.Bindings.Mouse
                    , XMonad.User.Bindings.Util
                    , XMonad.User.Layout.Decorations
                    , XMonad.User.Layout.Hook
                    , XMonad.User.Layout.Layouts
                    , XMonad.User.Layout.MultiToggle.TabBarDecoration
                    , XMonad.User.Layout.Workspaces
                    , XMonad.User.Log.ClickableWorkspaces
                    , XMonad.User.Log.StatusBar
                    , XMonad.User.Manage.Hook
                    , XMonad.User.Manage.Util
                    , XMonad.User.Prompt.Config
                    , XMonad.User.Prompt.MPD
                    , XMonad.User.Startup.Hook
                    , Xmobar.User.Monitors
                    , Xmobar.User.Util
  build-depends:      base >= 4.7 && < 4.16
                    , bytestring
                    , containers
                    , libmpd
                    , mtl
                    , regex-compat
                    , X11
                    , xmobar
                    , xmonad
                    , xmonad-contrib
  default-language: Haskell2010

executable xwm
  main-is:          xwm.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -fno-warn-missing-signatures
  build-depends:      base ^>= 4.14.3.0
                    , containers
                    , xmonad
                    , xmonad-contrib
                    , xwm
  default-language: Haskell2010

executable xbar
  main-is:            xbar.hs
  hs-source-dirs:     src
  ghc-options:        -Wall -fno-warn-missing-signatures
  build-depends:      base ^>= 4.14.3.0
                    , xmobar
                    , xwm
  default-language: Haskell2010
